--- a/index.html
+++ b/index.html
@@ -630,7 +630,9 @@
         }
 
         // API Configuration
-        const API_BASE_URL = 'http://localhost:5000/api';
+        const API_BASE_URL = window.location.hostname === 'localhost' 
+    ?       'http://localhost:5000/api' 
+            : '/api';
 
         // API Helper Functions
         async function apiCall(endpoint, method = 'GET', data = null) {
